--- a/.github/workflows/vm_gcc_f.yml
+++ b/.github/workflows/vm_gcc_f.yml
@@ -34,4 +34,4 @@ jobs:
             -D SITE="obsd-7.8" \
             ..
             ctest -T Build
-            ctest -T Test  -VV --output-on-error -R FORTRAN_testhdf5_fortran
+            ctest -T Test  -VV -R FORTRAN_testhdf5_fortran
