--- a/.github/workflows/vm_gcc_f.yml
+++ b/.github/workflows/vm_gcc_f.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: main
 
-DEFAULTS:
+defaults:
   run:
     shell: bash
 jobs:
@@ -36,4 +36,4 @@ jobs:
             -D SITE="obsd-7.8" \
             ..
             ctest -T Build
-            ctest -VVV  --output-on-failure -T Test -R FORTRAN_testhdf5_fortran
+            ctest -VV --output-on-failure -T Test -R FORTRAN_testhdf5_fortran
