--- a/.github/workflows/fbsd-f-j.yml
+++ b/.github/workflows/fbsd-f-j.yml
@@ -3,7 +3,7 @@ name: fbsd f j
 on:
   push:
     branches:
-      - main
+      - main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
