--- a/.github/workflows/fbsd-f.yml
+++ b/.github/workflows/fbsd-f.yml
@@ -21,15 +21,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v5
         with:
-          repository: brtnfld/hdf5
-          ref: H5R
+          repository: HDFGroup/hdf5
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
-        env:
-          FOO: A
-          BAR: B
         with:
-          environment_variables: FOO BAR
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
