--- a/.github/workflows/fbsd-f.yml
+++ b/.github/workflows/fbsd-f.yml
@@ -32,9 +32,9 @@ jobs:
           run: |
             sudo pkg install -y git
             sudo pkg install -y cmake
-            sudo pkg install -y gcc13
-            export FC=gfortran13
-            export CC=gcc13
+            sudo pkg install -y gcc
+            export FC=gfortran
+            export CC=gcc
             sudo mount -t fdescfs fdesc /dev/fd
             sudo mount -t procfs proc /proc
             mkdir build
