--- a/.github/workflows/fbsd_gcc-16_f.yml
+++ b/.github/workflows/fbsd_gcc-16_f.yml
@@ -1,9 +1,9 @@
-name: fbsd gf-16
+name: fbsd gcc-16 gf-16
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -34,16 +34,16 @@ jobs:
             sudo pkg install -y cmake
             sudo pkg install -y gcc16-devel
             export FC=gfortran16
+            export CC=gcc16
             sudo mount -t fdescfs fdesc /dev/fd
             sudo mount -t procfs proc /proc
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="cl-19/gf-16" \
+            -DBUILDNAME:STRING="gcc-16/gf-16" \
             -D HDF5_BUILD_FORTRAN:BOOL=ON \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D SITE:STRING="fbsd-14.3" ..
-            ctest -T Build
-            ctest -VV --output-on-failure -T Test
-#            ctest -D Experimental
+            ctest -D Experimental
+
             
