--- a/.github/workflows/fbsd-f.yml
+++ b/.github/workflows/fbsd-f.yml
@@ -3,7 +3,7 @@ name: fbsd gf-16
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -46,4 +46,3 @@ jobs:
             ctest -T Build
             ctest -VV --output-on-failure -T Test
 #            ctest -D Experimental
-            
