--- a/.github/workflows/fbsd-f.yml
+++ b/.github/workflows/fbsd-f.yml
@@ -3,7 +3,7 @@ name: fbsd gf-16
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -44,6 +44,4 @@ jobs:
             -D HDF5_BUILD_FORTRAN:BOOL=ON \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D SITE:STRING="fbsd-14.3" ..
-            ctest -T Build
-            ctest -VV --output-on-failure -T Test
-#            ctest -D Experimental
+            ctest -D Experimental
