--- a/.github/workflows/d_f.yml
+++ b/.github/workflows/d_f.yml
@@ -1,9 +1,8 @@
-name: fbsd sxb f
+name: d f
 
 on:
   push:
-    branches:
-      - main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -13,16 +12,16 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - name: freebsd
+          - name: openbsd
             architecture: x86-64
-            version: '14.3'
+            version: '7.8'
             host: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@v4
         with:
-          repository: brtnfld/hdf5
-          ref: H5R
+          repository: HDFGroup/hdf5
+
       - name: ${{ matrix.os.name }}
         uses: cross-platform-actions/action@master
         env:
@@ -35,17 +34,17 @@ jobs:
           version: '${{ matrix.os.version }}'
           shell: bash
           run: |
-            sudo pkg install -y git
-            sudo pkg install -y cmake
-            sudo pkg install -y gcc13
-            export FC=gfortran13
-            sudo mount -t fdescfs fdesc /dev/fd
-            sudo mount -t procfs proc /proc
+            sudo pkg_add git
+            sudo pkg_add cmake
+            sudo pkg_add g95-11.2.0p19
+            export FC=/usr/local/bin/egfortran
             mkdir build
             cd build
             cmake \
-            -DBUILDNAME:STRING="sxb/cl-19/gf-13" \
-            -D HDF5_BUILD_FORTRAN:BOOL=ON \
-            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
-            -D SITE:STRING="fbsd-14.3" ..
-            ctest -D Experimental
+            -DCMAKE_BUILD_TYPE=Debug \            
+            -D BUILDNAME="d/f" \
+            -D CTEST_DROP_SITE_INIT="my.cdash.org" \
+            -D HDF5_BUILD_FORTRAN=ON \
+            -D SITE=obsd-7.8 \
+            ..
+            ctest -D Experimental            
