--- a/.github/workflows/fbsd_f.yml
+++ b/.github/workflows/fbsd_f.yml
@@ -1,4 +1,4 @@
-name: fbsd gf-16
+name: fbsd gf-13
 
 on:
   push:
@@ -32,15 +32,15 @@ jobs:
           run: |
             sudo pkg install -y git
             sudo pkg install -y cmake
-            sudo pkg install -y gcc16-devel
-            export FC=gfortran16
+            sudo pkg install -y gcc13
+            export FC=gfortran13
             sudo mount -t fdescfs fdesc /dev/fd
             sudo mount -t procfs proc /proc
             mkdir build
             cd build
             cmake \
             -DCMAKE_BUILD_TYPE=Debug \
-            -DBUILDNAME:STRING="cl-19/gf-16" \
+            -DBUILDNAME:STRING="cl-19/gf-13" \
             -D HDF5_BUILD_FORTRAN:BOOL=ON \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D SITE:STRING="fbsd-14.3" ..
