ci(obsd): fix d

--- a/.github/workflows/f.yml
+++ b/.github/workflows/f.yml
@@ -2,7 +2,7 @@ name: f
 
 on:
   push:
-    branches: main
+    branches: main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
