ci(fbsd): rm debug

--- a/.github/workflows/fbsd_gcc-16_f.yml
+++ b/.github/workflows/fbsd_gcc-16_f.yml
@@ -3,7 +3,7 @@ name: fbsd gcc-16 gf-16
 on:
   push:
     branches:
-      - main
+      - main-
 
 jobs:
   test: # make sure the action works on a clean machine without building
