--- a/.github/workflows/wsl-deb.yml
+++ b/.github/workflows/wsl-deb.yml
@@ -17,11 +17,12 @@ jobs:
         with:
           repository: HDFGroup/hdf5
       - uses: Vampire/setup-wsl@v6
-        with:
-          additional-packages:
-            dos2unix
-            patterns-devel-base-devel_basis
-            curl
+        # with:
+        #   update: 'true'
+        #   additional-packages:
+        #     dos2unix
+        #     patterns-devel-base-devel_basis
+        #     curl
 
       - name: Run the script
         run: |
