--- a/.github/workflows/lin_anl_fmt.yml
+++ b/.github/workflows/lin_anl_fmt.yml
@@ -24,6 +24,8 @@ jobs:
 
       - name: checkout
         uses: actions/checkout@v5
+        with:
+          repository: HDFGroup/hdf5
 
       - name: test
         run: |
