--- a/.github/workflows/wsl-suse-15.2.yml
+++ b/.github/workflows/wsl-suse-15.2.yml
@@ -15,6 +15,10 @@ jobs:
         shell: wsl-bash {0}        
     runs-on: windows-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v5
+        with:
+          repository: HDFGroup/hdf5
       - uses: Vampire/setup-wsl@v6
         with:
           distribution: ${{ matrix.os }}
@@ -24,9 +28,6 @@ jobs:
             curl
       - name: Run the script
         run: |
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/snapshot-1.14.5.tar.gz
-          tar zxvf snapshot-1.14.5.tar.gz
-          cd hdf5-1.14.5-2	  
           mkdir build
           cd build
           pwd
