--- a/.github/workflows/lin_fmt.yml
+++ b/.github/workflows/lin_fmt.yml
@@ -1,9 +1,9 @@
-name: lin anl fmt
+name: lin fmt
 
 on:
   workflow_dispatch:
   push:
-    branches: main-
+    branches: main
 
 permissions:
   contents: read
@@ -34,7 +34,6 @@ jobs:
           cmake -G Ninja \
             -D BUILDNAME="anl/fmt" \
             -D CTEST_DROP_SITE_INIT="my.cdash.org" \
-            -D HDF5_ENABLE_ANALYZER_TOOLS:BOOL=ON \
             -D HDF5_ENABLE_FORMATTERS:BOOL=ON \
             -D SITE=ubu-24 \
             ..
