--- a/.github/workflows/wsl-suse-15.2.yml
+++ b/.github/workflows/wsl-suse-15.2.yml
@@ -23,9 +23,10 @@ jobs:
         with:
           distribution: ${{ matrix.os }}
           additional-packages:
+            cmake
+            curl
             dos2unix
             patterns-devel-base-devel_basis
-            curl
       - name: Run the script
         run: |
           mkdir build
