--- a/.github/workflows/wsl-alp.yml
+++ b/.github/workflows/wsl-alp.yml
@@ -12,7 +12,7 @@ jobs:
         os: [Alpine]
     defaults:
       run:
-        shell: wsl-bash {0}        
+        shell: wsl-bash {0}
     runs-on: windows-latest
     steps:
       - name: checkout
@@ -24,6 +24,7 @@ jobs:
           distribution: ${{ matrix.os }}
           additional-packages:
             cmake
+            bash
       - name: Run the script
         run: |
           mkdir build
