ci(i386): add debug

--- a/.github/workflows/i386_alp_d_f.yml
+++ b/.github/workflows/i386_alp_d_f.yml
@@ -3,7 +3,7 @@ name: i386 alp d f
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -26,11 +26,13 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 \
+          cmake \
             -DBUILDNAME:STRING="d/f" \
+            -DCMAKE_BUILD_TYPE=Debug \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
+            -DSITE:STRING=alp.i386 \
              ..
           ctest -D Experimental
         shell: bash
