--- a/.github/workflows/i386-alp-f.yml
+++ b/.github/workflows/i386-alp-f.yml
@@ -3,13 +3,16 @@ name: i386 alp f
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: checkout
+        uses: actions/checkout@v5
+        with:
+          repository: HDFGroup/hdf5
 
       - name: setup alpine
         uses: jirutka/setup-alpine@v1
@@ -21,14 +24,10 @@ jobs:
             cmake
       - name: run script
         run: |
-          cat /etc/os-release
-          curl -O -L https://support.hdfgroup.org/releases/hdf5/v1_14/v1_14_5/downloads/hdf5-1.14.5.tar.gz
-          tar zxvf hdf5-1.14.5.tar.gz
-          cd hdf5-1.14.5
           mkdir build
           cd build
           cmake -DSITE:STRING=alp.i386 \
-            -DBUILDNAME:STRING="5/r/f" \
+            -DBUILDNAME:STRING="r/f" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
             -DHDF5_BUILD_FORTRAN=ON \
