ci(alp): install gfortran

--- a/.github/workflows/i386-alp-f.yml
+++ b/.github/workflows/i386-alp-f.yml
@@ -22,6 +22,7 @@ jobs:
             build-base
             libgit2-dev
             cmake
+            gfortran
       - name: run script
         run: |
           mkdir build
