--- a/.github/workflows/i386_alp_d_f.yml
+++ b/.github/workflows/i386_alp_d_f.yml
@@ -22,6 +22,7 @@ jobs:
             build-base
             libgit2-dev
             cmake
+            gfortran
       - name: test
         run: |
           mkdir build
