--- a/.github/workflows/alp_f.yml
+++ b/.github/workflows/alp_f.yml
@@ -1,9 +1,9 @@
-name: i386 alp f
+name: alp f
 
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   build:
@@ -17,7 +17,7 @@ jobs:
       - name: setup alpine
         uses: jirutka/setup-alpine@v1
         with:
-          arch: x86
+          arch: x86_64
           packages: >
             build-base
             libgit2-dev
@@ -27,7 +27,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake -DSITE:STRING=alp.i386 \
+          cmake -DSITE:STRING=alp \
             -DBUILDNAME:STRING="r/f" \
             -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -DCTEST_DROP_LOCATION_INIT="/submit.php?project=HDF5" \
