ci(pip): install yaml-cpp

--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -10,5 +10,6 @@ jobs:
     steps:
       - name: test
         run: |
+          sudo apt install yaml-cpp
           pip install iowarp-core
           wrp_cae_omni
