--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -10,6 +10,7 @@ jobs:
     steps:
       - name: test
         run: |
-          pip install iowarp-core
+          pip install iowarp
           wrp_cae_omni
 #          sudo apt install libyaml-cpp-dev
+#          pip install iowarp-core
