--- a/.github/workflows/arm64-pip.yml
+++ b/.github/workflows/arm64-pip.yml
@@ -21,7 +21,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate            
           pip install iowarp-core
-          chimaera_start_runtime
+#          chimaera_start_runtime
 #          sudo apt install libyaml-cpp-dev
 #          pip install iowarp-core
 #          wrp_cae_omni
