--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -21,7 +21,8 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install iowarp-core
-          chimaera_start_runtime
+          wrp_cae_omni
+#          chimaera_start_runtime
 #          sudo apt install libyaml-cpp-dev
 #          pip install iowarp-core
 #          wrp_cae_omni
