--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -21,6 +21,7 @@ jobs:
           python -m venv venv
           source venv/bin/activate
           pip install iowarp-core
+          which wrp_cae_omni
           wrp_cae_omni
 #          chimaera_start_runtime
 #          sudo apt install libyaml-cpp-dev
