test: show size

--- a/.github/workflows/arm64-pip.yml
+++ b/.github/workflows/arm64-pip.yml
@@ -22,8 +22,9 @@ jobs:
           source venv/bin/activate            
           pip install iowarp-core
           which wrp_cae_omni
-          wrp_cae_omni
+          ls -lh /home/runner/work/actions/actions/venv/bin/wrp_cae_omni
+          wrp_cae_omni          
 #          chimaera_start_runtime
 #          sudo apt install libyaml-cpp-dev
 #          pip install iowarp-core
-#          wrp_cae_omni
+
