--- a/.github/workflows/arm64-pip.yml
+++ b/.github/workflows/arm64-pip.yml
@@ -19,7 +19,8 @@ jobs:
             zlib1g-dev liblzma-dev libbrotli-dev libsnappy-dev libblosc2-dev \
             libmpich-dev
           python -m venv venv
-          source venv/bin/activate            
+          source venv/bin/activate
+          export IOWARP_BUNDLE_BINARIES=ON
           pip install iowarp-core
           which wrp_cae_omni
           ls -lh /home/runner/work/actions/actions/venv/bin/wrp_cae_omni
