--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -20,6 +20,7 @@ jobs:
             libmpich-dev
           python -m venv venv
           source venv/bin/activate
+          export IOWARP_BUNDLE_BINARIES=ON
           pip install iowarp-core
           which wrp_cae_omni
           ls -lh /home/runner/work/actions/actions/venv/bin/wrp_cae_omni
