test: iowarp install.sh

--- a/.github/workflows/iowarp_install.yml
+++ b/.github/workflows/iowarp_install.yml
@@ -1,9 +1,9 @@
-name: pip
+name: iowarp install
 
 on:
   push:
     branches:
-      - main-
+      - main
 jobs:
   build:
     runs-on: ubuntu-24.04
@@ -20,10 +20,4 @@ jobs:
             libmpich-dev
           python -m venv venv
           source venv/bin/activate
-          export IOWARP_BUNDLE_BINARIES=ON
-          pip install iowarp
-          which wrp_cae_omni
-          ls -lh /home/runner/work/actions/actions/venv/bin/wrp_cae_omni
-          wrp_cae_omni
-#          chimaera_start_runtime
-
+          curl -fsSL https://raw.githubusercontent.com/iowarp/iowarp-install/main/install.sh | bash
