--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -20,9 +20,10 @@ jobs:
             libmpich-dev
           python -m venv venv
           source venv/bin/activate
-          pip install iowarp
+          pip install -i https://test.pypi.org/simple/ iowarp-core
           which wrp_cae_omni
           ls -lh /home/runner/work/actions/actions/venv/bin/wrp_cae_omni
           wrp_cae_omni
 #          chimaera_start_runtime
 #          export IOWARP_BUNDLE_BINARIES=ON
+#           pip install iowarp
