--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -19,5 +19,6 @@ jobs:
         run: |
           conda install -c conda-forge libgcc-ng
           conda install -y libgcc-ng=11.2.0
+          conda install -y cereal
           conda install -y iowarp::iowarp-core
           which chimaera_start_runtime
