--- a/.github/workflows/lin-24_conda_iowarp-core.yml
+++ b/.github/workflows/lin-24_conda_iowarp-core.yml
@@ -1,4 +1,4 @@
-name: conda iowarp-core
+name: lin-24 conda iowarp-core
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   install:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: apt
         run: |
@@ -15,14 +15,9 @@ jobs:
           sudo apt -y install libstdc++6
       - name: miniconda
         uses: conda-incubator/setup-miniconda@v3
-        with:
-          auto-update-conda: true
-          python-version: 3.12
-          channels: conda-forge
-        
       - name: iowarp
         run: |
+          conda install -c conda-forge libgcc-ng
+          conda install -y libgcc-ng=11.2.0
           conda install -c iowarp -c conda-forge iowarp-core          
           which chimaera_start_runtime
-#          conda install -c conda-forge libgcc-ng
-#          conda install -y libgcc-ng=11.2.0
