--- a/.github/workflows/lin-24_conda_iowarp-core.yml
+++ b/.github/workflows/lin-24_conda_iowarp-core.yml
@@ -15,9 +15,13 @@ jobs:
           sudo apt -y install libstdc++6
       - name: miniconda
         uses: conda-incubator/setup-miniconda@v3
+        with:
+          auto-update-conda: true
+          python-version: 3.13
+          channels: conda-forge
       - name: iowarp
         run: |
           conda install -c conda-forge libgcc-ng
           conda install -y libgcc-ng=11.2.0
-          conda install -c iowarp -c conda-forge iowarp-core          
+          conda install -c iowarp -c conda-forge iowarp-core
           which chimaera_start_runtime
