--- a/.github/workflows/lin-24_conda_iowarp-core.yml
+++ b/.github/workflows/lin-24_conda_iowarp-core.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           auto-update-conda: true
           python-version: 3.13
-          channels: conda-forge
+          channels: conda-forge, iowarp
       - name: iowarp
         run: |
-          conda install -c conda-forge libgcc-ng
-          conda install -y libgcc-ng=11.2.0
-          conda install -c iowarp -c conda-forge iowarp-core
-          which chimaera_start_runtime
+          conda install iowarp-core
+          echo $CONDA_PREFIX
+#          conda install -c conda-forge libgcc-ng
+#          conda install -y libgcc-ng=11.2.0
