--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -23,7 +23,8 @@ jobs:
       - name: iowarp
         run: |
           conda install iowarp-core
-          echo $CONDA_PREFIX         
+          find /usr/share/miniconda
+          echo $CONDA_PREFIX
 #          which chimaera_start_runtime
 #          conda install -c conda-forge libgcc-ng
 #          conda install -y libgcc-ng=11.2.0
