ci: run chimaera

--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -24,7 +24,8 @@ jobs:
         run: |
           conda install iowarp-core
           find /usr/share/miniconda
-          echo $CONDA_PREFIX
+          /usr/share/miniconda/bin/chimaera_start_runtime
+#           echo $CONDA_PREFIX
 #          which chimaera_start_runtime
 #          conda install -c conda-forge libgcc-ng
 #          conda install -y libgcc-ng=11.2.0
