--- a/.github/workflows/lin-24_conda_iowarp-core.yml
+++ b/.github/workflows/lin-24_conda_iowarp-core.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           conda install iowarp-core
           find /usr/share/miniconda
-          echo $CONDA_PREFIX
+          /usr/share/miniconda/bin/chimaera_start_runtime
+#          echo $CONDA_PREFIX
 #          conda install -c conda-forge libgcc-ng
 #          conda install -y libgcc-ng=11.2.0
