--- a/.github/workflows/conda_iowarp-core.yml
+++ b/.github/workflows/conda_iowarp-core.yml
@@ -3,7 +3,7 @@ name: conda iowarp-core
 on:
   push:
     branches:
-      - main
+      - main-
 
 jobs:
   install:
@@ -24,7 +24,8 @@ jobs:
         run: |
           conda install iowarp-core
           find /usr/share/miniconda
-          /usr/share/miniconda/bin/chimaera_start_runtime
+          /usr/share/miniconda/bin/chimaera_start_runtime &
+          /usr/share/miniconda/bin/wrp_cae
 #           echo $CONDA_PREFIX
 #          which chimaera_start_runtime
 #          conda install -c conda-forge libgcc-ng
